feat: update build configuration to exclude TypeScript files and set build target

--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   "scripts": {
     "start": "fiori run --open \"test/flp.html#app-preview\"",
     "start-local": "fiori run --config ./ui5-local.yaml --open \"test/flp.html#app-preview\"",
-    "build": "ui5 build --config=ui5.yaml --clean-dest --dest dist",
+    "build": "ui5 build --clean-dest --dest dist && node -e \"const fs=require('fs'),path=require('path');function del(d){for(const f of fs.readdirSync(d,{withFileTypes:true})){const p=path.join(d,f.name);f.isDirectory()?del(p):p.endsWith('.ts')&&fs.unlinkSync(p)}};del('dist')\"",
     "lint": "eslint ./",
     "ts-typecheck": "tsc --noEmit",
     "prestart": "npm run ts-typecheck",
