--- a/ui5.yaml
+++ b/ui5.yaml
@@ -22,7 +22,7 @@ server:
       afterMiddleware: compression
       configuration:
         port: 35729
-        path: webapp
+        path: dist/resources
         delay: 300
     - name: fiori-tools-preview
       afterMiddleware: fiori-tools-appreload
@@ -45,3 +45,6 @@ builder:
         debug: true
         transformModulesToUI5:
           overridesToOverride: true
+        excludes:
+          - "/**/*.ts"  # Excluir arquivos TypeScript do build final
+          - "/**/*.map"
